Senior_Project/src/senior/project/test/server/errors/ServerInvalidGenderException.java
package senior.project.test.server.errors;

/**
 *
 * @author Paul Jones
 */
public class ServerInvalidGenderException extends ServerRuntimeException {

  public ServerInvalidGenderException(String msg) {
    super(msg);
  }
}
